# MimiBoot

./: README.md
MimiBoot/: main.c
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/: CMakeLists.txt  Makefile  README.md
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/docs/: ELF_FORMAT.md
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/examples/: boot.cfg
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/examples/payload_blink/: main.c  payload.ld  startup.c
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/include/mimiboot/: handoff.h  types.h
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/linker/: mimiboot_rp2040.ld
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/src/core/: config.c  config.h  elf.h  handoff.c  handoff.h  loader.c  loader.h
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/src/fs/: fat32.c  fat32.h
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/src/hal/: hal.h
MimiBoot/mimiboot-v0.0.1-alpha/mimiboot/src/hal/rp2040/: hal_rp2040.c  rp2040_regs.h  sd_spi.c
